# c_tamplate

./: README.md  new.sh
template/: CMakeLists.txt  build.sh
template/src/: main.c  main.h
template/tests/: CMakeLists.txt  main_tests.c  main_tests.h
